export/networkpolicies/allow-from-codeready-workspaces-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    toolchain.dev.openshift.com/last-applied-configuration: '{"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"labels":{"toolchain.dev.openshift.com/provider":"codeready-toolchain"},"name":"allow-from-codeready-workspaces-operator","namespace":"jduimovich-dev"},"spec":{"ingress":[{"from":[{"namespaceSelector":{"matchLabels":{"network.openshift.io/policy-group":"codeready-workspaces"}}}]}],"podSelector":{},"policyTypes":["Ingress"]}}'
  labels:
    toolchain.dev.openshift.com/provider: codeready-toolchain
  name: allow-from-codeready-workspaces-operator
  namespace: jduimovich-dev
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: codeready-workspaces
  podSelector: {}
  policyTypes:
    - Ingress
