export/networkpolicies/allow-from-other-user-namespaces.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    toolchain.dev.openshift.com/last-applied-configuration: '{"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"labels":{"toolchain.dev.openshift.com/provider":"codeready-toolchain"},"name":"allow-from-other-user-namespaces","namespace":"jduimovich-dev"},"spec":{"ingress":[{"from":[{"namespaceSelector":{"matchLabels":{"name":"jduimovich-stage"}}}]}],"podSelector":{},"policyTypes":["Ingress"]}}'
  labels:
    toolchain.dev.openshift.com/provider: codeready-toolchain
  name: allow-from-other-user-namespaces
  namespace: jduimovich-dev
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: jduimovich-stage
  podSelector: {}
  policyTypes:
    - Ingress
