export/networkpolicies/allow-same-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    toolchain.dev.openshift.com/last-applied-configuration: '{"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"labels":{"toolchain.dev.openshift.com/provider":"codeready-toolchain"},"name":"allow-same-namespace","namespace":"jduimovich-dev"},"spec":{"ingress":[{"from":[{"podSelector":{}}]}],"podSelector":{}}}'
  labels:
    toolchain.dev.openshift.com/provider: codeready-toolchain
  name: allow-same-namespace
  namespace: jduimovich-dev
spec:
  ingress:
    - from:
        - podSelector: {}
  podSelector: {}
  policyTypes:
    - Ingress
